# humanoid-anim-spec

./: .gitignore  LICENSE  README.md  flake.nix  humanoid-anim.cabal
app/: Main.hs
docs/: humanoid-anim-spec.md  muscle_axes_table.md  spine-ik-integration-guide.md  squat.anim  t_pose_muscle_values.md  unity_humanoid_center_of_mass.md  unity_humanoid_muscle_reference.md
examples/: blender_export.json  reach_forward.yaml  wave_hand.yaml
src/: HumanoidAnim.hs
src/HumanoidAnim/: Animation.hs  Error.hs  Types.hs
src/HumanoidAnim/IK/: CCD.hs  Constraints.hs  Core.hs  FABRIK.hs  TwoBone.hs
src/HumanoidAnim/Input/: Blender.hs  Config.hs  UnityAnim.hs  Validation.hs
src/HumanoidAnim/Motion/: Easing.hs  Interpolation.hs  Keyframe.hs  Trajectory.hs
src/HumanoidAnim/Output/: GLTF.hs  Mesh.hs  Muscle.hs  UnityAnim.hs
src/HumanoidAnim/Skeleton/: Bones.hs  Config.hs  Hierarchy.hs  Transform.hs
test/: Spec.hs
test/IK/: FABRIKSpec.hs
test/Motion/: InterpolationSpec.hs
