cabal-version:      3.0
name:               humanoid-anim
version:            0.1.0.0
synopsis:           Unity Humanoid rig animation clip generator
description:        CLI tool for generating animation clips for Unity Humanoid rig
                    using IK (Inverse Kinematics).
license:            MIT
license-file:       LICENSE
author:             Humanoid Anim Team
maintainer:         humanoid-anim@example.com
category:           Animation, Graphics
build-type:         Simple
extra-doc-files:    README.md
extra-source-files: docs/*.md

common warnings
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates
                 -Wincomplete-uni-patterns -Wmissing-export-lists
                 -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

library
    import:           warnings
    exposed-modules:  HumanoidAnim
                    , HumanoidAnim.Types
                    , HumanoidAnim.Error
                    , HumanoidAnim.Animation
                    , HumanoidAnim.Skeleton.Bones
                    , HumanoidAnim.Skeleton.Hierarchy
                    , HumanoidAnim.Skeleton.Config
                    , HumanoidAnim.Skeleton.Transform
                    , HumanoidAnim.IK.Core
                    , HumanoidAnim.IK.TwoBone
                    , HumanoidAnim.Motion.Easing
                    , HumanoidAnim.Motion.Keyframe
                    , HumanoidAnim.Motion.Interpolation
                    , HumanoidAnim.Motion.Trajectory
                    , HumanoidAnim.Input.Config
                    , HumanoidAnim.Input.Validation
                    , HumanoidAnim.Input.UnityAnim
                    , HumanoidAnim.Output.GLTF
                    , HumanoidAnim.Output.Mesh
                    , HumanoidAnim.Output.Muscle
                    , HumanoidAnim.Output.UnityAnim
                    , HumanoidAnim.IK.CCD
                    , HumanoidAnim.IK.Constraints
                    , HumanoidAnim.IK.Spine
                    , HumanoidAnim.Input.Blender
    build-depends:    base >=4.17 && <5
                    , linear >=1.22 && <2
                    , aeson >=2.1 && <3
                    , aeson-pretty >=0.8 && <1
                    , yaml >=0.11 && <1
                    , bytestring >=0.11 && <1
                    , containers >=0.6 && <1
                    , text >=2.0 && <3
                    , vector >=0.13 && <1
                    , filepath >=1.4 && <2
                    , directory >=1.3 && <2
                    , mtl >=2.2 && <3
                    , transformers >=0.5 && <1
    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions: OverloadedStrings
                      , DeriveGeneric
                      , DerivingStrategies
                      , GeneralizedNewtypeDeriving
                      , LambdaCase
                      , RecordWildCards
                      , TypeFamilies
                      , StrictData

executable humanoid-anim
    import:           warnings
    main-is:          Main.hs
    build-depends:    base >=4.17 && <5
                    , humanoid-anim
                    , optparse-applicative >=0.17 && <1
                    , text >=2.0 && <3
                    , filepath >=1.4 && <2
                    , containers >=0.6 && <1
                    , linear >=1.22 && <2
    hs-source-dirs:   app
    default-language: GHC2021
    default-extensions: OverloadedStrings
                      , RecordWildCards

test-suite humanoid-anim-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    other-modules:    Motion.InterpolationSpec
    build-depends:    base >=4.17 && <5
                    , humanoid-anim
                    , hspec >=2.10 && <3
                    , QuickCheck >=2.14 && <3
                    , linear >=1.22 && <2
                    , containers >=0.6 && <1
    hs-source-dirs:   test
    default-language: GHC2021
    default-extensions: OverloadedStrings
